Fixed too big icons of Content Selector's selected options in the Inspect panel (#99) (cherry picked from commit 369d984)

--- a/src/main/resources/assets/admin/common/styles/apps/content/context-window.less
+++ b/src/main/resources/assets/admin/common/styles/apps/content/context-window.less
@@ -244,7 +244,6 @@
 
       .selected-option {
         border: 1px transparent solid;
-        height: auto;
         padding: 0px;
         position: relative;
 
@@ -254,17 +253,7 @@
 
         .names-and-icon-view {
 
-          .@{_COMMON_PREFIX}wrapper {
-            height: 48px;
-            width: 48px;
-          }
-
           .@{_COMMON_PREFIX}names-view {
-            .@{_COMMON_PREFIX}main-name {
-              height: auto;
-              font-size: 18px;
-              line-height: 30px;
-            }
             .ellipsis();
           }
         }
